--- a/app/src/main/res/layout-land/activity_user_detail.xml
+++ b/app/src/main/res/layout-land/activity_user_detail.xml
@@ -93,6 +93,7 @@
         </android.support.v7.widget.CardView>
 
         <TextView
+            android:id="@+id/followers_txt_msg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_10"
